k8s/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: dash-fe
spec:
  selector:
    app: dash-fe
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dash-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dash-fe
  template:
    metadata:
      labels:
        app: dash-fe
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: dash-fe
          # image: dash-fe:v0.0.2
          image: bpgcstag.azurecr.io/gcbpcicd/dash-fe:v0.0.3
          imagePullPolicy: Always
          ports:
            - containerPort: 80
