k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dash-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dev"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lc.dash.akacloudms.com       
      secretName: lc-dash-akacloudms-tls

  rules:
    - host: lc.dash.akacloudms.com     
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dash-be
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dash-fe
                port:
                  number: 80
